--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,10 @@
     <div class="ascii-bar-container">
     <div id="ascii-progress-bar" class="ascii-progress-bar">[]</div>
   </div>
-  
-  <!-- Email contact link (works on both desktop and mobile) -->
+    <!-- Email contact link (works on both desktop and mobile) -->
   <div class="header-right">
-    <a href="mailto:{{ site.email }}" class="email-link">{{ site.email }}</a>
+    <a href="mailto:{{ site.email }}" class="cta-button cta-button-small">
+      <span class="cta-text">Send me an E-Mail</span>
+    </a>
   </div>
 </header>
