add - imprint // update - page description &  styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
       <nav class="footer-nav">
         <ul class="footer-links">
           <li><a href="{{ '/' | relative_url }}">HOME</a></li><br>
-          <li><a href="{{ '/impressum/' | relative_url }}">IMPRINT</a></li><br>
+          <li><a href="{{ '/imprint/' | relative_url }}">IMPRINT</a></li><br>
         </ul>
       </nav>
     </div>
