update - hero stying and portfolio integration

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,7 @@
       <div class="social-links">
         <a href="https://github.com/{{ site.github_username }}">GitHub</a>
         <a href="https://instagram.com/{{ site.instagram_username }}">Instagram</a>
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">LinkedIn</a>
       </div>
     
     <div class="footer-bottom-column">
