add - new images to lab 2

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: default
   <!-- Portfolio Projects Section with Swipeable Cards -->
   <section class="portfolio-section">
     <div class="portfolio-section-inner">
-      <h2>Past projects</h2>
+      <h2>Past projects (WIP)</h2>
         <!-- Swipeable Card Container -->
     <div class="carousel-container">
       <div class="portfolio-carousel">
