--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,8 @@
       <nav class="footer-nav">
         <ul class="footer-links">
           <li><a href="{{ '/' | relative_url }}">HOME</a></li><br>
+          <li><a href="/assets/pdf/CV-Helfers.pdf" onclick="trackCVDownload()" target="_blank">CV</a></li><br>
+          <li><a href="{{ '/privacy/' | relative_url }}">PRIVACY</a></li><br>
           <li><a href="{{ '/imprint/' | relative_url }}">IMPRINT</a></li><br>
         </ul>
       </nav>
